--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1> hello world </h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Box Model Intro</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
