--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Box Model Intro</title>
+	<title>Jordan Skazinski</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
