--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <body>
     <header>
   <div>
-    <h1>Logo</h1>
+    <h1>Jordan Skazinski</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
@@ -19,16 +19,18 @@
     </nav>
   </div>
 </header>
+	
 <main>
   <div>
     <header>
-      <h2>Header 1</h2>
+      <h2>Introduction</h2>
     </header>
-    <p>Paragraph 1</p>
+    <p> I'm Jordan Skazinski, 25 y/o guy learning sofware engineering. I live in Longmont, Colorado.</p>
     <footer>
       <p>Footer 1</p>
     </footer>
   </div>
+	
   <div>
     <header>
       <h2>Header 2</h2>
@@ -39,6 +41,7 @@
     </footer>
   </div>
 </main>
+	
 <footer>
   <div>
     <nav>
