--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
       <h2>Introduction</h2>
     </header>
     <p> I'm Jordan Skazinski, 25 y/o guy learning sofware engineering. I live in Longmont, Colorado.</p>
-    <footer>
-      <p>Footer 1</p>
-    </footer>
+  </div>
+	
+  <div>
+    <header>
+      <h2>About Me</h2>
+    </header>
+    <p> Web development is a way for me to express my creativity. It has so much room for testing new ideas and finding the best fit for the situation, and for fitting those ideas togather with your teamates to make something great. </p>
   </div>
 	
   <div>
