--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
 	
   <div>
     <header>
+      <h2>How to Contact Me</h2>
+    </header>
+	<p>I don't have a Linkedln</p>
+	<p href="https://github.com/Jordan-Skazinski">Github</p>	 
+	<p></p>
+  </div>	
+  <div>
+    <header>
       <h2>Header 2</h2>
     </header>
     <p>Paragraph 2</p>
