--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <h2>How to Contact Me</h2>
     </header>
 	<p>I don't have a Linkedln</p>
-	<p href="https://github.com/Jordan-Skazinski">Github</p>	 
-	<p></p>
+	  <p> <a href="https://github.com/Jordan-Skazinski">Github</a></p>	 
+	  <p> <a href="https://mail.google.com/mail/u/2/#inbox">Email</a></p>
   </div>	
   <div>
     <header>
