--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 	  <p> <a href="https://github.com/Jordan-Skazinski">Github</a></p>	 
 	  <p> <a href="https://mail.google.com/mail/u/2/#inbox">Email</a></p>
   </div>	
+  <div>
+    <header>
+      <h2>list</h2>
+    </header>
+	  <ul>  <li>list item</li>
+		<li>list item</li>
+		<li>list item</li>
+		<li>list item</li>
+	  </ul>
+  </div>	
 
 	
 <footer>
