--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>	
   <div>
     <header>
-      <h2>list</h2>
+      <h2>unordered list</h2>
     </header>
 	  <ul>  <li>list item</li>
 		<li>list item</li>
@@ -53,7 +53,16 @@
 		<li>list item</li>
 	  </ul>
   </div>	
-
+  <div>
+    <header>
+      <h2>ordered list</h2>
+    </header>
+	  <ol>  <li>list item</li>
+		<li>list item</li>
+		<li>list item</li>
+		<li>list item</li>
+	  </ol>
+  </div>
 	
 <footer>
   <div>
