--- a/index.html
+++ b/index.html
@@ -39,20 +39,11 @@
     <header>
       <h2>How to Contact Me</h2>
     </header>
-	<p>I don't have a Linkedln</p>
-	  <p> <a href="https://github.com/Jordan-Skazinski">Github</a></p>	 
-	  <p> <a href="https://mail.google.com/mail/u/2/#inbox">Email</a></p>
+	<ul><li><a href="https://www.linkedin.com/">Linkedln</a></li>
+	  <li><a href="https://github.com/Jordan-Skazinski">Github</a></li>	 
+	  <li><a href="https://mail.google.com/mail/u/2/#inbox">Email</a></li></ul>
   </div>	
-  <div>
-    <header>
-      <h2>unordered list</h2>
-    </header>
-	  <ul>  <li>list item</li>
-		<li>list item</li>
-		<li>list item</li>
-		<li>list item</li>
-	  </ul>
-  </div>	
+ 	
   <div>
     <header>
       <h2>ordered list</h2>
