--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
   </div>
 	
 <footer>
-  <div>
-    <nav>
-      <p>Footer Nav</p>
-    </nav>
+  <div class="cat-image">
+    
+      <p>Heres a pic of my cat to brighten you day!</p>
+      <img src="images/cat.jpg"/>
+      <p>Her name is Yumi</p>
   </div>
 </footer>
-
+  
     <script src="script.js"></script>
   </body>
 </html>
