--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <header>
       <h2>Introduction</h2>
     </header>
-    <p> I'm Jordan Skazinski, 25 y/o guy learning sofware engineering. I live in Longmont, Colorado.</p>
+    <p> I'm Jordan Skazinski, 25 y/o guy learning sofware engineering.</p>
+     <p>I live in Longmont, Colorado.</p>
   </div>
 	
   <div>
@@ -59,7 +60,7 @@
   <div class="cat-image">
     
       <p>Heres a pic of my cat to brighten you day!</p>
-      <img src="Images/cat.jpg"/>
+      <img src="images/cat.jpg"/>
       <p>Her name is Yumi</p>
   </div>
 </footer>
