--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="cat-image">
     
       <p>Heres a pic of my cat to brighten you day!</p>
-      <img src="images/cat.jpg"/>
+      <img src="Images/cat.jpg"/>
       <p>Her name is Yumi</p>
   </div>
 </footer>
