--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <header>
   <div>
     <h1>Jordan Skazinski</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-      </ul>
-    </nav>
   </div>
 </header>
 	
@@ -34,6 +28,7 @@
       <h2>About Me</h2>
     </header>
     <p> Web development is a way for me to express my creativity. It has so much room for testing new ideas and finding the best fit for the situation, and for fitting those ideas togather with your teamates to make something great. </p>
+	<p> Outside of web development I tend to be drawn to other creative outlits such as digital art, 3d modeling, and writing storys.</p>
   </div>
 	
   <div>
