--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
  	
   <div>
     <header>
-      <h2>ordered list</h2>
+      <h2>My favroite activities in order</h2>
     </header>
-	  <ol>  <li>list item</li>
-		<li>list item</li>
-		<li>list item</li>
-		<li>list item</li>
+	  <ol>  <li>Thinking</li>
+		<li>Writing/Drawing</li>
+		<li>Reading Books</li>
+		<li>Games</li>
 	  </ol>
   </div>
 	
