--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
       <h2>My favroite activities in order</h2>
     </header>
-	  <ol>  <li>Thinking</li>
+	  <ol>  <li>Thinking/Learning</li>
 		<li>Writing/Drawing</li>
 		<li>Reading Books</li>
 		<li>Games</li>
