--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
-/* The head, sets the name on the tab, links the index to the style sheet, and sets the meta. */
+<!-- The head, sets the name on the tab, links the index to the style sheet, and sets the meta. -->
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Jordan Skazinski</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-/* Just putting my name in h1 at the top of the website*/
+<!-- Just putting my name in h1 at the top of the website -->
 <body>
     <header>
   <div>
     <h1>Jordan Skazinski</h1>
   </div>
 </header>
-/* Just putting my name in h1 at the top of the website*/
+<!-- Just putting my name in h1 at the top of the website --> 
 <main>
   <div>
     <header>
@@ -23,7 +23,7 @@
     <p> I'm Jordan Skazinski, 25 y/o guy learning sofware engineering.</p>
      <p>I live in Longmont, Colorado.</p>
   </div>
-/* in the main i have paragraphs set up with seperate headeers so I can make some boxes around each main section*/	
+<!-- in the main i have paragraphs set up with seperate headeers so I can make some boxes around each main section -->	
   <div>
     <header>
       <h2>About Me</h2>
@@ -36,7 +36,7 @@
     <header>
       <h2>How to Contact Me</h2>
     </header>
-	  /* Links to websites, useing a href to set the website and after the ">" will be what the user sees on the website. this is also an unordered list*/
+	  <!-- Links to websites, useing a href to set the website and after the ">" will be what the user sees on the website. this is also an unordered list -->
 	<ul><li><a href="https://www.linkedin.com/">Linkedln</a></li>
 	  <li><a href="https://github.com/Jordan-Skazinski">Github</a></li>	 
 	  <li><a href="https://mail.google.com/mail/u/2/#inbox">Email</a></li></ul>
@@ -46,20 +46,20 @@
     <header>
       <h2>My favroite activities in order</h2>
     </header>
-	  /*ordered list for showing ranked items, or steps. */
+	  <!-- ordered list for showing ranked items, or steps. -->
 	  <ol>  <li>Thinking/Learning</li>
 		<li>Writing/Drawing</li>
 		<li>Reading Books</li>
 		<li>Games</li>
 	  </ol>
   </div>
-	/*fotter for the bottom of the webpage, though i didnt add anything special for the footer. the only changes are on the img class */
+	<!-- fotter for the bottom of the webpage, though i didnt add anything special for the footer. the only changes are on the img class -->
 <footer>
-	/*puts a class on the image to edit it in style.css */
+	<!-- puts a class on the image to edit it in style.css -->
   <div class="cat-image">
     
       <p>Heres a pic of my cat to brighten you day!</p>
-	  /*this is the image file, needs the full path if local */
+	  <!-- this is the image file, needs the full path if local -->
       <img src="Images/cat.jpg"/>
       <p>Her name is Yumi</p>
   </div>
