--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     
       <p>Heres a pic of my cat to brighten you day!</p>
 	  <!-- this is the image file, needs the full path if local -->
-      <img src="Images/cat.jpg"/>
+      <img src="Images/cat.jpg" alt="My Cat">
       <p>Her name is Yumi</p>
   </div>
 </footer>
