--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!-- The head, sets the name on the tab, links the index to the style sheet, and sets the meta. -->
 <head>
 	<meta charset="utf-8">
