--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<!-- puts a class on the image to edit it in style.css -->
   <div class="cat-image">
     
-      <p>Heres a pic of my cat to brighten you day!</p>
+      <h3>Heres a pic of my cat to brighten you day!</h3>
 	  <!-- this is the image file, needs the full path if local -->
       <img src="Images/cat.jpg" alt="My Cat">
       <p>Her name is Yumi</p>
