--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 <!-- Just putting my name in h1 at the top of the website --> 
 <main>
   <div>
-    <header>
+    <article>
       <h2>Introduction</h2>
-    </header>
+    </article>
     <p> I'm Jordan Skazinski, 25 y/o guy learning sofware engineering.</p>
      <p>I live in Longmont, Colorado.</p>
   </div>
 <!-- in the main i have paragraphs set up with seperate headeers so I can make some boxes around each main section -->	
   <div>
-    <header>
+    <article>
       <h2>About Me</h2>
-    </header>
+    </article>
     <p> Web development is a way for me to express my creativity. It has so much room for testing new ideas and finding the best fit for the situation, and for fitting those ideas togather with your teamates to make something great. </p>
 	<p> Outside of web development I tend to be drawn to other creative outlits such as digital art, 3d modeling, and writing storys.</p>
   </div>
 	
   <div>
-    <header>
+    <article>
       <h2>How to Contact Me</h2>
-    </header>
+    </article>
 	  <!-- Links to websites, useing a href to set the website and after the ">" will be what the user sees on the website. this is also an unordered list -->
 	<ul><li><a href="https://www.linkedin.com/">Linkedln</a></li>
 	  <li><a href="https://github.com/Jordan-Skazinski">Github</a></li>	 
@@ -44,9 +44,9 @@
   </div>	
  	
   <div>
-    <header>
+    <article>
       <h2>My favroite activities in order</h2>
-    </header>
+    </article>
 	  <!-- ordered list for showing ranked items, or steps. -->
 	  <ol>  <li>Thinking/Learning</li>
 		<li>Writing/Drawing</li>
